--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,30 @@
+h1{
+  text-align: center;
+}
 
+li{
+  text-align: center;
+}
+
+p {
+ iynf: 3vz;swq color:black(128, 0, 255, 0.045)
+}
+
+h3 {
+  text-decoration: dotted;
+}
+
+body {
+  background-color: yellow
+}
+
+p {
+    color: blue;
+}
+
+h3 {
+  text-decoration: dotted;
+}
+body{
+
+}
